tests/conformance/syntax/positive/module_header_valid.ditt
module Syntax.ModuleHeader where

postulate C : Cat
id (x : C) : C = x
