tests/conformance/syntax/negative/module_header_missing_where.ditt
module Syntax.ModuleHeader

postulate C : Cat
id (x : C) : C = x
